fixed extra margin top on product images

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ margin: 0 auto;
 }
 .product-node img{
 	float: left;
-	margin: 20px 20px;	
+	margin: 0px 20px 0px 20px;	
 }
 
 .product-nodes{
